--- a/lovely.toml
+++ b/lovely.toml
@@ -244,6 +244,17 @@ if not shop_exists and G.GAME.modifiers.dungeon then
             end
         end
         G.load_shop_jokers = nil
+    elseif not G.GAME.first_shop_buffoon and not G.GAME.banned_keys['p_buffoon_normal_1'] then
+        G.GAME.first_shop_buffoon = true
+        local card = Card(G.shop_jokers.T.x + G.shop_jokers.T.w/2,
+        G.shop_jokers.T.y, G.CARD_W*1.27, G.CARD_H*1.27, G.P_CARDS.empty, G.P_CENTERS['p_buffoon_normal_'..(math.random(1, 2))], {bypass_discovery_center = true, bypass_discovery_ui = true})
+        create_shop_card_ui(card, 'Booster', G.shop_jokers)
+        card.ability.booster_pos = #G.shop_jokers.cards + 1
+        card:start_materialize()
+        G.shop_jokers:emplace(card)
+        card.ability.couponed = true
+        card:set_cost()
+        create_shop_card_ui(card, card.ability.set, G.shop_jokers)
     end
 end'''
 match_indent = true
@@ -256,4 +267,36 @@ position = 'after'
 payload = '''   if G.GAME.modifiers.dungeon then
         return G.UIDEF.loot_shop()
     end'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'blind.lua'
+pattern = '''ease_hands_played(-self.hands_sub)'''
+position = 'after'
+payload = '''G.E_MANAGER:add_event(Event({
+    trigger = 'immediate',
+    func = function()
+        if G.GAME.current_round.hands_left < 1 then
+            G.GAME.current_round.hands_left = 1
+        end
+        return true
+    end
+}))'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'blind.lua'
+pattern = '''ease_discard(-self.discards_sub)'''
+position = 'after'
+payload = '''G.E_MANAGER:add_event(Event({
+    trigger = 'immediate',
+    func = function()
+        if G.GAME.current_round.discards_left < 0 then
+            G.GAME.current_round.discards_left = 1
+        end
+        return true
+    end
+}))'''
 match_indent = true
