--- a/lovely.toml
+++ b/lovely.toml
@@ -11,11 +11,13 @@ position = 'after'
 payload = '''self.P_ATTACKS = {
     blank = {order = 1, key = 'blank', atlas = 'dng_attacks', name = "Blank", pos = {x=0,y=0}, set = "BlindEffect", effect = "", config = {},  unlocked = true, discovered = true},
     debuff_1 = {order = 2, key = 'debuff_1', atlas = 'dng_attacks', name = "Debuff I", pos = {x=1,y=0}, set = "BlindEffect", effect = "", config = {odds = 8},  unlocked = true, discovered = true},
-    debuff_2 = {order = 3, key = 'debuff_2', atlas = 'dng_attacks', name = "Debuff II", pos = {x=1,y=0}, set = "BlindEffect", effect = "", config = {odds = 5},  unlocked = true, discovered = true},
+    debuff_2 = {order = 3, key = 'debuff_2', atlas = 'dng_attacks', name = "Debuff II", pos = {x=5,y=0}, set = "BlindEffect", effect = "", config = {odds = 5},  unlocked = true, discovered = true},
     raise_1 = {order = 4, key = 'raise_1', atlas = 'dng_attacks', name = "Raise I", pos = {x=4,y=0}, set = "BlindEffect", effect = "", config = {size = 1.2},  unlocked = true, discovered = true},
-    raise_2 = {order = 5, key = 'raise_2', atlas = 'dng_attacks', name = "Raise II", pos = {x=4,y=0}, set = "BlindEffect", effect = "", config = {size = 1.5},  unlocked = true, discovered = true},
+    raise_2 = {order = 5, key = 'raise_2', atlas = 'dng_attacks', name = "Raise II", pos = {x=1,y=1}, set = "BlindEffect", effect = "", config = {size = 1.5},  unlocked = true, discovered = true},
     hide_1 = {order = 6, key = 'hide_1', atlas = 'dng_attacks', name = "Hide I", pos = {x=2,y=0}, set = "BlindEffect", effect = "", config = {cards = 3},  unlocked = true, discovered = true},
-    hide_2 = {order = 7, key = 'hide_2', atlas = 'dng_attacks', name = "Hide II", pos = {x=2,y=0}, set = "BlindEffect", effect = "", config = {cards = 6},  unlocked = true, discovered = true},
+    hide_2 = {order = 7, key = 'hide_2', atlas = 'dng_attacks', name = "Hide II", pos = {x=6,y=0}, set = "BlindEffect", effect = "", config = {cards = 6},  unlocked = true, discovered = true},
+    ring_1 = {order = 8, key = 'ring_1', atlas = 'dng_attacks', name = "Ring I", pos = {x=3,y=0}, set = "BlindEffect", effect = "", config = {cards = 1},  unlocked = true, discovered = true},
+    ring_2 = {order = 9, key = 'ring_2', atlas = 'dng_attacks', name = "Ring II", pos = {x=0,y=1}, set = "BlindEffect", effect = "", config = {cards = 2},  unlocked = true, discovered = true},
 }
 self.BL_EFFECT_PATTERNS = {
     bl_small = {
@@ -32,6 +34,12 @@ self.BL_EFFECT_PATTERNS = {
         hide_1 = {weight = 1},
         hide_2 = {weight = 0.5},
         raise_1 = {weight = 2.5},
+    },
+    bl_dng_scarlet_spider = {
+        hide_1 = {weight = 1.2},
+        raise_2 = {weight = 1},
+        ring_1 = {weight = 1},
+        ring_2 = {weight = 0.5},
     }
 }'''
 match_indent = true
@@ -47,6 +55,8 @@ payload = '''elseif _c.set == 'BlindEffect' then
     elseif (_c.name == "Raise I") or (_c.name == "Raise II") then
         loc_vars = {cfg.size}
     elseif (_c.name == "Hide I") or (_c.name == "Hide II") then
+        loc_vars = {card.ability.cards}
+    elseif (_c.name == "Ring I") or (_c.name == "Ring II") then
         loc_vars = {card.ability.cards}
     end
     localize{type = 'descriptions', key = _c.key, set = _c.set, nodes = desc_nodes, vars = loc_vars}'''
@@ -71,7 +81,7 @@ match_indent = true
 target = 'functions/state_events.lua'
 pattern = '''G.RESET_JIGGLES = true'''
 position = 'after'
-payload = '''if G.GAME.modifiers.dungeon then
+payload = '''if G.GAME.modifiers.dungeon and (G.GAME.blind.chips <= G.GAME.chips) then
     local area = G.HUD_blind:get_UIE_by_ID("blind_attacks").children[1].children[1].config.object
     if G.GAME.blind_attacks then
         for i = #G.GAME.blind_attacks, 1, -1 do
@@ -128,9 +138,21 @@ target = 'game.lua'
 pattern = '''if G.GAME.current_round.hands_played == 0 and'''
 position = 'before'
 payload = '''if played_hand and G.GAME.modifiers.dungeon then
-   add_dungeon_attack()
+    add_dungeon_attack()
 end
 played_hand = nil'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'game.lua'
+pattern = '''G.GAME.blind:drawn_to_hand()'''
+position = 'before'
+payload = '''if G.GAME.modifiers.dungeon then
+    for i, j in ipairs(G.GAME.blind_attacks) do
+        calculate_blind_effect(j, {drawn_to_hand = true, index = i})
+    end
+end'''
 match_indent = true
 
 [[patches]]
@@ -299,4 +321,28 @@ payload = '''G.E_MANAGER:add_event(Event({
         return true
     end
 }))'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'functions/common_events.lua'
+pattern = '''function get_new_boss()'''
+position = 'after'
+payload = '''   if G.GAME.challenge == 'c_dungeon' then
+        if (G.GAME.round_resets.ante == 8) then
+            return 'bl_dng_scarlet_spider'
+        elseif (G.GAME.round_resets.ante == 4) then
+            return 'bl_dng_string'
+        end
+    end'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'cardarea.lua'
+pattern = '''if v.ability.forced_selection and not self.highlighted[1] then'''
+position = 'before'
+payload = '''if v.ability.forced_selection and self.highlighted[1] and not v.highlighted then
+    self:add_to_highlighted(v)
+end'''
 match_indent = true
