--- a/lovely.toml
+++ b/lovely.toml
@@ -79,9 +79,9 @@ match_indent = true
 [[patches]]
 [patches.pattern]
 target = 'functions/state_events.lua'
-pattern = '''G.RESET_JIGGLES = true'''
-position = 'after'
-payload = '''if G.GAME.modifiers.dungeon and (G.GAME.blind.chips <= G.GAME.chips) then
+pattern = '''if game_over then'''
+position = 'before'
+payload = '''if G.GAME.modifiers.dungeon and not game_over then
     local area = G.HUD_blind:get_UIE_by_ID("blind_attacks").children[1].children[1].config.object
     if G.GAME.blind_attacks then
         for i = #G.GAME.blind_attacks, 1, -1 do
@@ -255,7 +255,7 @@ target = 'game.lua'
 pattern = '''G.CONTROLLER:snap_to({node = G.shop:get_UIE_by_ID('next_round_button')})'''
 position = 'before'
 payload = '''shop_exists = old_shop_exists
-if not shop_exists and G.GAME.modifiers.dungeon then
+if not shop_exists and G.GAME.modifiers.dungeon and G.shop_jokers then
     if G.load_shop_jokers then 
         nosave_shop = true
         G.shop_jokers:load(G.load_shop_jokers)
@@ -287,7 +287,9 @@ match_indent = true
 target = 'functions/UI_definitions.lua'
 pattern = '''function G.UIDEF.shop()'''
 position = 'after'
-payload = '''   if G.GAME.modifiers.dungeon then
+payload = '''   if G.GAME.memory then
+        return G.UIDEF.memory()
+    elseif G.GAME.modifiers.dungeon then
         return G.UIDEF.loot_shop()
     end'''
 match_indent = true
@@ -376,6 +378,8 @@ payload = '''if _tag and _tag.config.ref_table then
     local valid = false
     if _tag.config.ref_table.key == 'tag_dng_blackjack' then
         valid = true
+    elseif _tag.config.ref_table.key == 'tag_dng_memory' then
+        valid = true
     end
     if valid then
         local skipped, skip_to = G.GAME.blind_on_deck or 'Small', 
@@ -391,6 +395,57 @@ payload = '''if _tag and _tag.config.ref_table then
             SMODS.calculate_context({skip_blind = true})
             if _tag.config.ref_table.key == 'tag_dng_blackjack' then
                 dunegon_selection('bl_dng_dealer')
+            elseif _tag.config.ref_table.key == 'tag_dng_memory' then
+                if G.blind_select then 
+                    G.blind_prompt_box:get_UIE_by_ID('prompt_dynatext1').config.object.pop_delay = 0
+                    G.blind_prompt_box:get_UIE_by_ID('prompt_dynatext1').config.object:pop_out(5)
+                    G.blind_prompt_box:get_UIE_by_ID('prompt_dynatext2').config.object.pop_delay = 0
+                    G.blind_prompt_box:get_UIE_by_ID('prompt_dynatext2').config.object:pop_out(5) 
+            
+                    G.E_MANAGER:add_event(Event({
+                    trigger = 'before', delay = 0.2,
+                    func = function()
+                        G.blind_prompt_box.alignment.offset.y = -10
+                        G.blind_select.alignment.offset.y = 40
+                        G.blind_select.alignment.offset.x = 0
+                        return true
+                    end}))
+                    G.E_MANAGER:add_event(Event({
+                    trigger = 'immediate',
+                    func = function()
+                        G.blind_select:remove()
+                        G.blind_prompt_box:remove()
+                        G.blind_select = nil
+                        delay(0.2)
+                        return true
+                    end}))
+                    G.E_MANAGER:add_event(Event({
+                    trigger = 'immediate',
+                    func = function()
+                        G.RESET_JIGGLES = nil
+                        delay(0.4)
+                        G.E_MANAGER:add_event(Event({
+                        trigger = 'immediate',
+                        func = function()
+                            
+                            delay(0.4)
+
+                            G.E_MANAGER:add_event(Event({
+                                trigger = 'immediate',
+                                func = function()
+                                    G.GAME.memory = true
+                                    G.STATE = G.STATES.SHOP
+                                    G.STATE_COMPLETE = false
+                                    return true
+                                end
+                            }))
+                            return true
+                            end
+                        }))
+                        return true
+                        end
+                    }))
+                end
             end
             return true
             end
@@ -410,4 +465,77 @@ payload = '''(G and G.GAME and G.GAME.blind and G.GAME.blind.config and G.GAME.b
         {n=G.UIT.O, config={object = DynaText({string = {' '..localize('ph_blackjack_lost')..' '}, colours = {G.C.RED}, shadow = true, pop_in = 0, scale = 0.5*scale, silent = true})}}
     }}
 }} or config.saved and'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'card.lua'
+pattern = '''function Card:highlight(is_higlighted)'''
+position = 'after'
+payload = '''   if G.memory_row_1 and ((self.area == G.memory_row_1) or (self.area == G.memory_row_2)) then
+        if (self.facing == 'back') and G.GAME.currently_choosing and G.GAME.memory_cards and not self.debuff then
+            self:flip()
+            table.insert(G.GAME.memory_cards, self)
+            if #G.GAME.memory_cards == 2 then
+                local match = nil
+                if G.GAME.memory_cards[1].config.center.key == G.GAME.memory_cards[2].config.center.key then
+                    play_area_status_text("Match")
+                    match = G.GAME.memory_cards[1].config.center.key
+                end
+                local cards = G.GAME.memory_cards
+                G.GAME.memory_cards = nil
+                G.E_MANAGER:add_event(Event({
+                    trigger = 'immediate',
+                    func = function()
+                        G.E_MANAGER:add_event(Event({
+                            trigger = 'after',
+                            delay = 3,
+                            func = function()
+                                if match then
+                                    cards[1].ability.perma_debuff = true
+                                    cards[2].ability.perma_debuff = true
+                                    if cards[1].ability.consumeable and (G.consumeables.config.card_limit > #G.consumeables.cards) then
+                                        local card = SMODS.create_card {key = match, area = G.consumeables}
+                                        card:add_to_deck()
+                                        G.consumeables:emplace(card)
+                                    elseif cards[1].ability.set == "Joker" and (G.jokers.config.card_limit > #G.jokers.cards) then
+                                        local card = SMODS.create_card {key = match, area = G.jokers}
+                                        card:add_to_deck()
+                                        G.jokers:emplace(card)
+                                    elseif cards[1].ability.set == "Voucher" then
+                                        local card = SMODS.create_card {key = match}
+                                        G.FUNCS.use_card({config = {ref_table = card}})
+                                    end
+                                else
+                                    cards[1]:flip()
+                                    cards[2]:flip()
+                                end
+                                G.GAME.currently_choosing = nil
+                                save_run()
+                                return true
+                            end}))
+                        return true
+                    end
+                }))
+            end
+        end
+        return
+    end'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'game.lua'
+pattern = '''self.load_shop_vouchers = nil'''
+position = 'after'
+payload = '''G.load_memory_row_1 = nil
+G.load_memory_row_2 = nil'''
+match_indent = true
+
+[[patches]]
+[patches.pattern]
+target = 'functions/button_callbacks.lua'
+pattern = '''G.CONTROLLER.locks.toggle_shop = true'''
+position = 'after'
+payload = '''G.GAME.memory = nil'''
 match_indent = true
